--- a/Project.toml
+++ b/Project.toml
@@ -8,12 +8,14 @@ BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 
 [compat]
 BenchmarkTools = "1.6.0"
 LinearAlgebra = "1.11.0"
 Printf = "1.11.0"
 Random = "1.11.0"
+StaticArrays = "1.9.15"
 julia = "1.11"
 
 [extras]
